--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "extern/pybind11"]
 	path = extern/pybind11
 	url = https://github.com/pybind/pybind11.git
+[submodule "extern/matplotplusplus"]
+	path = extern/matplotplusplus
+	url = https://github.com/alandefreitas/matplotplusplus/
